--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "express": "^4.17.2",
         "jsonwebtoken": "^8.5.1",
         "mysql": "^2.18.1",
-        "nodemon": "^2.0.15"
+        "nodemon": "^2.0.15",
+        "router": "^1.3.6"
     }
 }
